// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Slider.svelte > should render 1`] = `
<div>
  <scroll
    class="absolute z-10 flex w-full flex-col overflow-scroll foo"
    style="top: 16px;"
  >
    <!---->
  </scroll>
  
</div>
`;

exports[`Slider.svelte > should render 2`] = `
<div>
  <scroll
    class="absolute z-10 flex w-full flex-col overflow-scroll bar"
    style="top: 16px;"
  >
    <!---->
  </scroll>
  
</div>
`;
